--- a/assets/css/d3Style.css
+++ b/assets/css/d3Style.css
@@ -1,15 +1,15 @@
 .aText {
   font-family: sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   text-anchor: middle;
 }
 
-.active {
+.active
   font-weight: bold;
   fill: #000;
   transition: fill 0.3s ease-out;
   text-anchor: middle;
-}
+
 
 .inactive {
   font-weight: lighter;
@@ -24,7 +24,7 @@
 }
 
 /* font size dependent on radius, see app.js */
-.stateText {
+.label {
   font-family: sans-serif;
   text-anchor: middle;
 }
